@@ -1,4 +1,5 @@
 2007-12-12 David Moore <dcm@acm.org>
+	* SVN 508: Fix isochronous declarations.
 	* SVN 507: Remove internal.h include from vendor include files
 
 2007-12-12 Damien Douxchamps http://damien.douxchamps.net/
